modules/traefik/templates/ingressroute-dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-external
  namespace: ${namespace}
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.kubernetes.local`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    services:
    - kind: TraefikService
      name: api@internal
